# sol-next1

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  README.md  alembic.ini  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: _bootstrap.py  lint_staged.py  post_tool_use_write.py  pre_tool_use_bash.py  pre_tool_use_read.py  pre_tool_use_web.py  pre_tool_use_write.py  session_start.py  user_prompt_submit.py
.claude/lib/: __init__.py  audit.py  context.py  decision.py  dispatcher.py  paths.py
.claude/lib/handlers/: __init__.py  bash_file_write.py  dangerous_bash.py  docs_location.py  external_refs.py  file_size_cap.py  function_size_cap.py  import_boundaries.py  magic_numbers.py  no_arbitrary_values.py  no_inline_styles.py  no_print.py  no_raw_colors.py  no_silent_except.py  post_ruff.py  primitive_usage.py  secret_scanner.py  sensitive_read.py  test_naming.py  typed_python.py  variants_only.py  web_access.py
.claude/policies/: quality.yaml
.claude/tests/: conftest.py  test_bash_file_write.py  test_bootstrap.py  test_dangerous_bash.py  test_dispatcher.py  test_docs_location.py  test_external_refs.py  test_file_size_cap.py  test_function_size_cap.py  test_import_boundaries.py  test_magic_numbers.py  test_no_arbitrary_values.py  test_no_inline_styles.py  test_no_print.py  test_no_raw_colors.py  test_no_silent_except.py  test_primitive_usage.py  test_secret_scanner.py  test_test_naming.py  test_typed_python.py  test_variants_only.py
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
config/: sol.yaml
config/lexicons/: alignment.yaml  disciplines.yaml  fiqh.yaml  hadith.yaml  kalam.yaml  quranic.yaml  rijal.yaml  shia_imamate.yaml  tasawwuf.yaml
config/shards/: alignment.yaml  book_categories.yaml  degraded_modes.yaml  disciplines.yaml  events.yaml  fiqh.yaml  graph_schema.yaml  hadith.yaml  kalam.yaml  masumin.yaml  phase_contracts.yaml  quranic.yaml  rijal.yaml  shia_imamate.yaml  tasawwuf.yaml
docs/: contributing.md  corpus-scope.md  design-system.md  foundation.md  harness.md  index.md  migrations.md  quality-standards.md  repo-layout.md  storybook.md
docs/adr/: 0001-monorepo-layout.md  0002-design-tokens-as-ssot.md  0003-storage-stack.md  0004-graph-ontology.md  0005-phase-contracts.md  0006-frontend-reader-design.md
src/backend/: __init__.py  main.py
src/backend/core/: __init__.py  config.py  db.py  errors.py  logging.py
src/backend/models/: __init__.py
src/backend/routers/: __init__.py  health.py
src/backend/services/: __init__.py
src/frontend/: app.css  app.html  error.html  eslint.config.js  hooks.client.ts  hooks.server.ts  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest-setup.ts
src/frontend/.storybook/: main.ts  manager.ts  preview.ts
src/frontend/e2e/: showcase.spec.ts
src/frontend/lib/: index.ts
src/frontend/lib/components/home/: Astrolabe.svelte  CelestialSky.svelte  Colophon.svelte  Cornerpiece.svelte  DomainCabinet.svelte  DomainGlyph.svelte  Hero.svelte  LiveTicker.svelte  (+2 more)
src/frontend/lib/design-system/: Tokens.stories.svelte  cn.ts  contracts.ts  cva.test.ts  cva.ts  index.ts  tokens.css  tokens.ts  variants.ts
src/frontend/lib/fixtures/: books.ts  daily.ts  domains.ts  index.ts  reader.ts  types.ts
src/frontend/lib/server/: api-client.ts
src/frontend/lib/stores/: index.ts  theme.ts
src/frontend/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/frontend/routes/search/: +page.svelte
src/frontend/routes/showcase/: +page.svelte
src/migrations/: env.py  script.py.mako
src/pipeline/: __init__.py  cli.py  config.py  contracts.py  lexicon.py  models.py
src/pipeline/core/: constants.py  exceptions.py
src/pipeline/phases/: __init__.py  enrich.py  extract.py  graph.py  ingest.py  segment.py
src/pipeline/utils/: arabic.py
tests/backend/: test_health.py
tests/pipeline/: test_arabic.py  test_ingest.py  test_lexicon.py
(+40 files in other folders)
